@@ -1,5 +1,13 @@
 2007-02-07  Dalibor Topic  <robilad@kaffe.org>
 
+	* install-defs.sh.in: Removed.
+
+	* configure.ac (AC_CONFIG_FILES): Removed install-defs.sh.
+
+	* Makefile.in, configure: Regenerated.
+
+2007-02-07  Dalibor Topic  <robilad@kaffe.org>
+
 	* configure.ac (ZINCS, ZDEPS): Removed redundant variables.
 
 	* Makefile.am (DEPENDENCIES): Removed. 
